<resources>
    <string name="app_name">易修</string>
    <string name="str_login_title">登录</string>
    <string name="str_login_register">注册</string>
    <string name="str_edit_username">用户名</string>
    <string name="str_edit_tel">手机号</string>
    <string name="str_edit_sex">性别</string>
    <string name="str_edit_age">年龄</string>
    <string name="str_mail">邮箱：</string>
    <string name="str_mail1">请输入邮箱 如：example@qq.com</string>
    <string name="str_edit_password">密码</string>
    <string name="str_edit_password1">密码:</string>
    <string name="str_edit_password2">请输入密码</string>
    <string name="str_find_password">找回密码</string>
    <string name="str_quick_login">手机号快捷登录</string>
    <string name="str_input_phone_num">手机号:</string>
    <string name="str_username">用户名:</string>
    <string name="str_input_username">请输入用户名</string>
    <string name="str_input_phone_num11">请输入11位手机号</string>
    <string name="str_input_code">验证码</string>
    <string name="str_input_code1">请输入验证码</string>
    <string name="str_set_password">3设置密码</string>
    <string name="str_edit_input_phone_num">请输入手机号</string>
    <string name="str_send_code">发送验证码</string>
    <string name="str_read_agree">我已阅读并同意</string>
    <string name="str_user_permission"><u>美团网用户协定</u></string>
</resources>
