<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/co_login_bg"
    tools:context="com.example.easyrepair3.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/str_login_register"
        android:paddingLeft="16dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_input_phone_num"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/telEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/co_edit_bg"
            android:hint="@string/str_input_phone_num11"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/tel"
            android:layout_alignBottom="@+id/tel"
            android:layout_toRightOf="@+id/tel"
            android:layout_toEndOf="@+id/tel" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_username"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/co_edit_bg"
            android:hint="@string/str_input_username"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:text="@string/str_edit_password1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/co_edit_bg"
            android:hint="@string/str_edit_password2"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_mail"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/co_edit_bg"
            android:hint="@string/str_mail1"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/str_login_register"
        android:background="@drawable/shape"
        android:layout_margin="16dp"
        android:clickable="true"
        />
</LinearLayout>
