<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/co_login_bg"
    tools:context="com.example.easyrepair3.TelActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="登录"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/co_edit_bg"
        android:hint="@string/str_edit_tel"
        android:paddingLeft="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/co_edit_bg"
        android:hint="@string/str_edit_password"
        android:padding="16dp"
        />
    <Button
        android:id="@+id/tel_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/str_login_title"
        android:background="@drawable/shape"
        android:layout_margin="16dp"
        />

</LinearLayout>
